--- a/css/popup.css
+++ b/css/popup.css
@@ -14,92 +14,12 @@ ul {
 }
 a {
   text-decoration: none;
-  color: #fff;
   /* color: white; */
 }
 a:visited{
   color: white;
 }
 
-#logo img {
-  width: 70px;
-  height: 70px;
-  margin: 20px;
-}
-
-#header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #0073D2;
-  transition: 0.3s ease;
-}
-
-#header.blur{
-  filter: blur(10px);
-  transition: 0.3s ease;
-}
-#pedido.blur{
-  filter: blur(10px);
-  transition: 0.3s ease;
-}
-
-#menu {
-  text-align: center;
-  /* display: none; */
-  visibility: hidden;
-  flex-direction: column;
-  flex-wrap: wrap;
-  position: absolute;
-  transition: .3s ease;
-  height: 0px;
-  width: 100%;
-  right: 0px;
-  margin-top: 0px;
-  padding-top: 50px;
-  background: #0073D2;
-  font-family: inter, helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 0.1em;
-}
-
-#menu a {
-  margin: 0 auto;
-  width: 500px;
-  display: block;
-  padding: .5rem;
-  height: 0px;
-  margin-bottom: 70px;
-}
-
-#menu a:hover {
-  color: #e7e7e7;
-}
-
-#btn-mobile  {
-  margin: 20px;
-  transform: rotate(-15deg);
-  transition: .3s ease;
-  cursor: pointer;
-}
-
-#nav.active #menu {
-  display: flex;
-  visibility: visible;
-  height: 100vh;
-  font-size: 3em;
-}
-
-#nav.active #btn-mobile {
-  transform: rotate(15deg);
-  transition: .3s ease;
-}
-
-/* .container-pedido {
-  width: 100%;
-  margin-top: 50px;
-
-} */
 
 .lista{
   display: flex;
@@ -113,14 +33,11 @@ a:visited{
   margin: 10px;
 }
 .lista a{
-  text-transform: none;
   font-size: 1em;
   cursor: pointer;
-  font-weight: bold;
 }
 .pedido {
   margin: 0 auto;
-  transition: 0.3s ease;
 }
 .pedido h1{
   margin-top: 50px;
@@ -139,7 +56,6 @@ a:visited{
   background-color: #0073D2;
   width: 700px;
 }
-
 .tabela{
   box-sizing: border-box;
   display: flex;
@@ -156,6 +72,14 @@ a:visited{
   padding: 0;
 }
 
+/* LINHA VERTICAL */
+/* .linha2{
+  position: absolute;
+  left: 50%;
+  border-right: 1px solid white;
+  height: ;
+} */
+
 hr {
     margin: 0px;
 }
@@ -166,26 +90,8 @@ hr {
   padding-right: 30px;
   padding-left: 30px;
   text-transform: uppercase;
-}
 
-.popup {
-  position: fixed;
-  top: 0; bottom: 0; right: 0; left: 0;
-  display: none;
 }
-.popup h1{
-  color: #fff;
-}
-.resumo-popup{
-  margin: 0 auto;
-  font-family: inter, sans-serif;
-  font-weight: 400;
-  font-size: 1.5em;
-  color: white;
-  background-color: #024983;
-  width: 700px;
-}
-
 
 
 @media (max-width: 720px) {
@@ -205,10 +111,6 @@ hr {
   }
 
   .resumo{
-    font-size: 1em;
-    width: 100%;
-  }
-  .resumo-popup{
     font-size: 1em;
     width: 100%;
   }
