--- a/css/historico.css
+++ b/css/historico.css
@@ -147,6 +147,7 @@ a:visited{
   padding-right: 10px;
   padding-left: 10px;
   flex-wrap: wrap;
+  font-size: 0.6em;
 }
 
 /*LINHA HORIZONTAL*/
@@ -169,9 +170,9 @@ hr {
 }
 
 .popup {
-  position: fixed;
+  margin-top: 50px ;
   top: 0; bottom: 0; right: 0; left: 0;
-  display: none;
+  display: flex;
 }
 .popup h1{
   color: #fff;
@@ -186,8 +187,31 @@ hr {
   width: 700px;
 }
 
-
-
+.voltar-btn{
+  padding: 20px 20px 20px 20px;
+  font-family: inter, sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 2em;
+  color: white;
+  background-color: #0073D2;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 10%;
+}
+.lista-numero{
+  display: flex;
+  justify-content: flex-end;
+  font-family: inter, sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: white;;
+  text-transform: uppercase;
+  margin: 10px;
+}
 @media (max-width: 720px) {
   #header {
     background: #fff;
@@ -225,5 +249,10 @@ hr {
   .linha2{
     border: none;
   }
-
+  .voltar-btn{
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 30px;
+    width: 30%;
+  }
 }
