--- a/css/sitPedidos.css
+++ b/css/sitPedidos.css
@@ -14,6 +14,7 @@ ul {
 }
 a {
   text-decoration: none;
+  color: #fff;
   /* color: white; */
 }
 a:visited{
@@ -31,6 +32,16 @@ a:visited{
   align-items: center;
   justify-content: space-between;
   background: #0073D2;
+  transition: 0.3s ease;
+}
+
+#header.blur{
+  filter: blur(10px);
+  transition: 0.3s ease;
+}
+#pedido.blur{
+  filter: blur(10px);
+  transition: 0.3s ease;
 }
 
 #menu {
@@ -90,8 +101,27 @@ a:visited{
 
 } */
 
+.lista{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: inter, sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: white;;
+  text-transform: uppercase;
+  margin: 10px;
+}
+
+.lista a{
+  text-transform: none;
+  font-size: 1em;
+  cursor: pointer;
+  font-weight: bold;
+}
 .pedido {
   margin: 0 auto;
+  transition: 0.3s ease;
 }
 .pedido h1{
   margin-top: 50px;
@@ -110,6 +140,7 @@ a:visited{
   background-color: #0073D2;
   width: 700px;
 }
+
 .tabela{
   box-sizing: border-box;
   display: flex;
@@ -126,14 +157,6 @@ a:visited{
   padding: 0;
 }
 
-/* LINHA VERTICAL */
-/* .linha2{
-  position: absolute;
-  left: 50%;
-  border-right: 1px solid white;
-  height: ;
-} */
-
 hr {
     margin: 0px;
 }
@@ -144,32 +167,74 @@ hr {
   padding-right: 30px;
   padding-left: 30px;
   text-transform: uppercase;
-
 }
 
-footer{
-  width: 700px;
-  margin: 0 auto;
-}
-.footer-1 {
-  top: 0px;
-  width: 100%;
+.popup {
+  margin-top: 50px ;
+  top: 0; bottom: 0; right: 0; left: 0;
   display: flex;
-  justify-content: center;
-  margin-top: 20px;
-  z-index: 1;
 }
-#confirmar {
-  padding: 20px 50px 20px 50px;
+.popup h1{
+  color: #fff;
+}
+.resumo-popup{
+  margin: 0 auto;
   font-family: inter, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 1.5em;
+  color: white;
+  background-color: #024983;
+  width: 700px;
+}
+.botoes{
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 700px;
+}
+.botoes a{
+  padding: 20px;
+  margin-top: 30px;
+  height: 30px;
+  font-family: inter, sans-serif;
+  font-weight: bold;
   text-transform: uppercase;
-  font-size: 3em;
+  font-size: 2em;
   color: white;
   background-color: #0073D2;
   border: none;
   cursor: pointer;
+  text-align: center;
 }
+
+.btn-alterar{
+  background-color: #024983;
+  font-size: 1.5em;
+  padding: 20px;
+  margin-top: 30px;
+  font-family: inter, sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+}
+.alterar :nth-child(3){
+  background-color: #9E0C0C;
+
+}
+.alterar{
+  display: flex;
+  flex-direction: column;
+}
+.tabela span{
+  position: absolute;
+  font-size: 0.6em;
+  top: 30%;
+}
+
 
 
 
@@ -195,6 +260,10 @@ footer{
     font-size: 1em;
     width: 100%;
   }
+  .resumo-popup{
+    font-size: 1em;
+    width: 100%;
+  }
   .itens {
     margin: 0;
     display: flex;
@@ -208,24 +277,29 @@ footer{
   .linha2{
     border: none;
   }
-
-  footer{
-    width: 100%;
-  }
-
-  #confirmar {
-    font-size: 1.5em;
-    padding: 15px 20px 15px 20px;
-    margin: 0px;
-  }
   .voltar-btn{
     font-size: 1.5em;
-    padding: 15px 20px 15px 20px;
-    margin: 0px;
+    text-align: center;
+    margin-top: 30px;
+    width: 30%;
   }
-  .cancelar-btn{
-    margin-top: 20px;
-    padding: 15px 20px 15px 20px;
-    font-size: 1.2em;
+  .tabela span{
+    display: none;
+  }
+  .botoes{
+    max-width: 100%;
+  }
+  .botoes a, .btn-alterar{
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 20px;
+    font-size: 1.5em;
+    color: white;
+    text-align: center;
+  }
+  .btn-alterar{
+    font-size: 1.3em;
   }
 }
